rabbitmq-nodes-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-08-31T16:08:24Z"
  labels:
    app.kubernetes.io/component: rabbitmq
    app.kubernetes.io/name: import-definitions
    app.kubernetes.io/part-of: rabbitmq
  name: import-definitions-nodes
  namespace: rabbit
  ownerReferences:
  - apiVersion: rabbitmq.com/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: RabbitmqCluster
    name: import-definitions
    uid: 82981f15-d849-4f66-9ab9-863df1ab334e
  resourceVersion: "171190"
  uid: e95f0bec-a3a2-4eaa-ba49-abea4a4db27d
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: 4369
  - name: cluster-rpc
    port: 25672
    protocol: TCP
    targetPort: 25672
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: import-definitions
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
